# mlody2

./: .bazeliskrc  MODULE.bazel  README.md  gazelle_python.yaml  pyproject.toml
common/: BUILD.bazel  __init__.py
common/python/: BUILD.bazel  __init__.py
common/python/starlarkish/: BUILD.bazel  __init__.py
common/python/starlarkish/core/: BUILD.bazel  __init__.py  struct_test.py
common/python/starlarkish/evaluator/: BUILD.bazel  __init__.py  evaluator.py  evaluator_test.py
mlody/: AGENTS.md  BUILD.bazel  CLAUDE.md  REQUIREMENTS.md
mlody/cli/: BUILD.bazel  dag_cmd.py  dag_cmd_test.py  dag_gui.py  main.py  main_test.py  shell.py  shell_test.py  show.py  show_test.py
mlody/common/: BUILD.bazel  README.md  REQUIREMENTS-implementation.md  action.mlody  action_test.py  attrs.mlody  build_ref.mlody  context.py  executor.mlody  executor_test.py  implementation.mlody  implementation_test.py  locations.mlody  locations_test.py  representation.mlody  sandbox.mlody  task.mlody  task_test.py  types.REQUIREMENTS.md  types.mlody  types_test.py  values.mlody  values_test.py
mlody/common/huggingface/: BUILD.bazel  downloader.mlody  model-download.py  model_download_test.py
mlody/common/image_builder/: BUILD.bazel  DIFF.md  README.md  REQUIREMENTS.md  __init__.py  __main__.py  auth.py  design.md  errors.py  log.py  output.py  pipeline.py  spec.md
mlody/common/image_builder/phases/: BUILD.bazel  __init__.py  build.py  clone.py  push.py  remote.py  tags.py
mlody/common/image_builder/tests/: BUILD.bazel  __init__.py  build_test.py  cli_test.py  clone_test.py  errors_test.py  output_test.py  push_phase_test.py  tags_test.py
mlody/core/: BUILD.bazel  dag.py  dag_test.py  location_composition.py  location_composition_test.py  rule.mlody  rule_test.py  source_parser.py  source_parser_test.py  targets.py  targets_test.py  traversal_grammar.py  traversal_grammar_test.py  traversal_parser.py  traversal_parser_test.py  virtual_value.py  workspace.py  workspace_test.py
mlody/core/label/: BUILD.bazel  __init__.py  errors.py  label.py  label_test.py  parser.py  parser_test.py
mlody/core/openspec/changes/rule-common-attrs/: REQUIREMENTS.md
mlody/core/parquet/: BUILD.bazel  __init__.py  deserializer.py  parquet_test.py
mlody/core/sql/: BUILD.bazel  __init__.py  sql_query.py  sql_test.py
mlody/db/: BUILD.bazel  evaluations.py  evaluations_test.py  local_diff.py  local_diff_test.py
mlody/infra/kind/: BUILD.bazel  README.md  REQUIREMENTS.md  hello-world.sh  kind_cluster.py  kind_cluster_test.py  runner.py
mlody/lsp/: BUILD.bazel  completion.py  completion_test.py  definition.py  server.py  server_test.py
mlody/openspec/changes/dag-gui/: REQUIREMENTS.md  design.md  tasks.md
mlody/openspec/changes/dag-label-filter/: REQUIREMENTS.md  design.md  tasks.md
mlody/openspec/changes/entity-source-ranges/: REQUIREMENTS.md  SPEC.md
mlody/openspec/changes/framera-pose-estimator/: SPEC.md  tasks.md
mlody/openspec/changes/mav-437-workspace-dag/: REQUIREMENTS.md  SPEC.md  tasks.md
mlody/openspec/changes/mav-457-label-value-mapping/: REQUIREMENTS.md
mlody/openspec/changes/mav-457-named-list-traversal/: REQUIREMENTS.md
mlody/openspec/changes/mlody-label-parsing/: REQUIREMENTS.md  SPEC.md
mlody/openspec/changes/sqlite-evaluations-db/: REQUIREMENTS.md  design.md  proposal.md  tasks.md
mlody/openspec/changes/sqlite-evaluations-db/specs/evaluations-db/: spec.md
mlody/openspec/changes/types-extensions/: SPEC.md  design.md  tasks.md
mlody/resolver/: BUILD.bazel  __init__.py  cache.py  cache_test.py  errors.py  errors_test.py  git_client.py  label_value.py  label_value_test.py  parquet_integration_test.py  resolver.py  resolver_test.py
mlody/teams/framera/pose-estimation/: BUILD.bazel  README.md  REQUIREMENTS.md  __init__.py  calibrate-camera.py  calibration.py  calibration_test.py  camera.json  camera_calibrate.py  camera_calibrate_test.py  framera_pose_estimator_nvidia  geometry.py  geometry_test.py  mediapipe_adapter.py  mediapipe_adapter_test.py  pose-estimator.py  pose_estimator.py  pose_estimator_test.py  runtime.py  runtime_test.py  schema.py  schema_test.py
mlody/teams/framera/yolo26/: BUILD.bazel  README.md  __init__.py  framera_yolo26_nvidia  runtime.py  runtime_test.py  schema.py  schema_test.py  yolo26-detect.py  yolo26_detector.py  yolo26_detector_test.py
mlody/teams/lexica/: diamond.mlody
mlody/teams/pixelle/: datasets.mlody
mlody/teams/sonora/assets/: BUILD.bazel
mlody/teams/sonora/chatterbox/: BUILD.bazel  __init__.py  runtime.py  speak.py
mlody/teams/sonora/speak/: BUILD.bazel  __init__.py  runtime.py  runtime_test.py  speak.py  speak_test.py
requirements/: BUILD.bazel  all.txt  chatterbox.in  chatterbox.txt  runtime.txt
tools/: o-repin  tools.lock.json
