####
# Misc
include("//build/modules:misc.MODULE.bazel")

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_shell", version = "0.6.1")

# used in both go and python. Not happy about having it here, but I
# don't have a better solution.
bazel_dep(name = "gazelle", version = "0.47.0")
##

####
# C++
# NOTE: seems to break eglot/gopls
include("//build/modules:cpp.MODULE.bazel")
##

####
# Python
include("//build/modules:python.MODULE.bazel")
##





####
# OCI image building (rules_oci + rules_pkg) — required by mlody-image-builder
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    # gcr.io/distroless/base pinned at a stable digest for reproducibility.
    digest = "sha256:b0510424f0c7c1d6fdae75ef5c1d349fa72d312e96f69728fad6beb04755b8b4",
    image = "gcr.io/distroless/base",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")

oci.pull(
    name = "distroless_python3",
    # gcr.io/distroless/python3-debian12 pinned at a stable digest for reproducibility.
    digest = "sha256:e19b29c8473bed88f8b6e31e49d1133d1bdb2bf9c0af7e82d0e7434f7c036a63",
    image = "gcr.io/distroless/python3-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "distroless_python3", "distroless_python3_linux_amd64", "distroless_python3_linux_arm64")

oci.pull(
    name = "debian_slim",
    # docker.io/library/debian:12-slim — has bash, needed for aspect_rules_py
    # launchers which are bash scripts that set up the hermetic Python venv.
    digest = "sha256:f06537653ac770703bc45b4b113475bd402f451e85223f0f2837acbf89ab020a",
    image = "debian",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
    tag = "12-slim",
)
use_repo(oci, "debian_slim", "debian_slim_linux_amd64", "debian_slim_linux_arm64")
##

####
# Copybara version override — BCR only carries 0.0.0-20240326-6485af6; use
# archive_override to pin to the 2026-03-30 release without waiting for BCR.
# The bazel_dep version in misc.MODULE.bazel is superseded by this override.
archive_override(
    module_name = "copybara",
    integrity = "sha256-b+P4WPdc2JBbJXO8JGW6pbAP6Qqyo59p1CqKENHtAdw=",
    strip_prefix = "copybara-20260330",
    urls = ["https://github.com/google/copybara/archive/refs/tags/v20260330.tar.gz"],
)

# aspect_rules_py 1.10.0 has a bug in _map_srcs (py_pex_binary.bzl): generated
# namespace __init__.py files from rules_python produce a bazel-out/ --dep path
# alongside the source-tree path, causing pex to fail with MetadataError.
# Patch normalises f.path against f.root.path so uniquify=True collapses them.
archive_override(
    module_name = "aspect_rules_py",
    integrity = "sha256-xnVgCx0NMMy61LPIJ2KbDteH3fYwMDS+l5CU46lHKZo=",
    patch_strip = 1,
    patches = ["//build/patches:aspect_rules_py_pex_generated_deps.patch"],
    strip_prefix = "rules_py-1.10.0",
    urls = ["https://github.com/aspect-build/rules_py/releases/download/v1.10.0/rules_py-v1.10.0.tar.gz"],
)
##

####
# External dependencies
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "whisper_cpp",
    build_file_content = 'filegroup(name = "all_srcs", srcs = glob(["**"]), visibility = ["//visibility:public"])',
    patch_args = ["-p1"],
    patches = ["//third_party/whisper/patches:001-cmake-binary-dir.patch"],
    sha256 = "97f19a32212f2f215e538ee37a16ff547aaebc54817bd8072034e02466ce6d55",
    strip_prefix = "whisper.cpp-1.7.1",  # Match the tag version
    urls = ["https://github.com/ggml-org/whisper.cpp/archive/refs/tags/v1.7.1.tar.gz"],
)
##
