load("//build/bzl:python.bzl", "o_py_library", "o_py_test")

exports_files(["rule.mlody"])

o_py_library(
    name = "targets_lib",
    srcs = ["targets.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "targets_test",
    srcs = ["targets_test.py"],
    deps = [
        "//common/python/starlarkish",
        ":core_lib",
        "//common/python/starlarkish/core:core_lib",
        "@pip//pytest",
    ],
)

o_py_library(
    name = "plan_lib",
    srcs = ["plan.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "plan_test",
    srcs = ["plan_test.py"],
    deps = [
        ":core_lib",
        "@pip//pytest",
    ],
)

o_py_library(
    name = "source_parser_lib",
    srcs = ["source_parser.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//tree_sitter",
        "@pip//tree_sitter_starlark",
    ],
)

o_py_test(
    name = "source_parser_test",
    srcs = ["source_parser_test.py"],
    deps = [
        ":core_lib",
        "@pip//pytest",
    ],
)

o_py_library(
    name = "workspace_lib",
    srcs = ["workspace.py"],
    data = ["builtins.mlody"],
    visibility = ["//:__subpackages__"],
    deps = [
        ":source_parser_lib",
        ":targets_lib",
        "//common/python/starlarkish/core:core_lib",
        "//common/python/starlarkish/evaluator:evaluator_lib",
        "//mlody/common:context_lib",  # keep
        "@pip//rich",
    ],
)

o_py_test(
    name = "workspace_test",
    srcs = ["workspace_test.py"],
    deps = [
        ":core_lib",
        "//common/python/starlarkish",
        "//common/python/starlarkish/core:core_lib",
        "//mlody/common:context_lib",  # keep
        "@pip//pyfakefs",
        "@pip//pytest",
        "@pip//rich",
    ],
)

o_py_library(
    name = "core_lib",
    srcs = [
        "__init__.py",
        "dag.py",
        "plan.py",
        "source_parser.py",
        "targets.py",
        "workspace.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//common/python/starlarkish/core:core_lib",
        "//common/python/starlarkish/evaluator:evaluator_lib",
        "//mlody/common:common_lib",
        "//mlody/common:context_lib",  # keep
        "//mlody/core/label:label_pkg",  # keep
        "@pip//networkx",  # keep — workspace DAG builder
        "@pip//rich",
        "@pip//tree_sitter",
        "@pip//tree_sitter_starlark",
    ],
)

o_py_test(
    name = "dag_test",
    srcs = ["dag_test.py"],
    data = [
        "rule.mlody",
        "//mlody/common:action.mlody",  # keep — base files for in-memory test workspace
        "//mlody/common:attrs.mlody",  # keep
        "//mlody/common:locations.mlody",  # keep
        "//mlody/common:task.mlody",  # keep
        "//mlody/common:types.mlody",  # keep
        "//mlody/common:values.mlody",  # keep
    ],
    deps = [
        ":core_lib",
        "//common/python/starlarkish",
        "//common/python/starlarkish/evaluator:evaluator_lib",
        "@pip//networkx",  # keep
        "@pip//pytest",
    ],
)
