load("//build/bzl:python.bzl", "o_py_library", "o_py_test")

o_py_library(
    name = "resolver_lib",
    srcs = [
        "__init__.py",
        "cache.py",
        "errors.py",
        "git_client.py",
        "label_value.py",
        "resolver.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//mlody/core:core_lib",
        "//mlody/core:location_composition_lib",
        "//mlody/core:traversal_grammar",  # keep — label_value.py imports PathSegment types for engine dispatch
        "//mlody/db:db_lib",  # keep — resolver.py imports open_db, write_evaluation, compute_local_diff_sha
    ],
)


o_py_test(
    name = "errors_test",
    srcs = ["errors_test.py"],
    deps = [
        ":resolver_lib",
        "//common/python/starlarkish",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "git_client_test",
    srcs = ["git_client_test.py"],
    deps = [
        ":resolver_lib",
        "//common/python/starlarkish",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "cache_test",
    srcs = ["cache_test.py"],
    deps = [
        ":resolver_lib",
        "//common/python/starlarkish",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "resolver_test",
    srcs = ["resolver_test.py"],
    deps = [
        ":resolver_lib",
        "//common/python/starlarkish",
        "//mlody/db:db_lib",  # keep — resolver_test queries SQLite directly after resolve_workspace
        "@pip//pytest",
    ],
)

o_py_test(
    name = "label_value_test",
    srcs = ["label_value_test.py"],
    deps = [
        ":resolver_lib",
        "//common/python/starlarkish",  # keep — starlarkish evaluator used by Workspace
        "@pip//pyfakefs",  # keep — pyfakefs provides the `fs` fixture via pytest plugin
    ],
)
