load("//build/bzl:python.bzl", "o_py_binary", "o_py_library", "o_py_test")

o_py_binary(
    name = "model-download",
    srcs = ["model-download.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//huggingface_hub",
        "@pip//requests",
    ],
)

o_py_library(
    name = "huggingface_lib",
    srcs = ["model-download.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pip//huggingface_hub",
        "@pip//requests",
    ],
)

o_py_test(
    name = "model_download_test",
    srcs = ["model_download_test.py"],
    data = ["model-download.py"],
    deps = [
        "@pip//huggingface_hub",
        "@pip//pytest",
        "@pip//requests",
    ],
)
