load("//build/bzl:python.bzl", "o_py_library", "o_py_test")

o_py_library(
    name = "tests_lib",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

o_py_test(
    name = "tags_test",
    srcs = ["tags_test.py"],
    deps = [
        "//mlody/common/image_builder/phases:phases_lib",  # keep
    ],
)

o_py_test(
    name = "clone_test",
    srcs = ["clone_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder/phases:phases_lib",  # keep
        "@pip//pyfakefs",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "build_test",
    srcs = ["build_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder/phases:phases_lib",  # keep
        "@pip//pyfakefs",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "errors_test",
    srcs = ["errors_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder:image_builder_core",  # keep
    ],
)

o_py_test(
    name = "output_test",
    srcs = ["output_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder:image_builder_core",  # keep
        "@pip//pytest",
    ],
)

o_py_test(
    name = "cli_test",
    srcs = ["cli_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder:cli_lib",  # keep
        "@pip//click",
        "@pip//pytest",
    ],
)

o_py_test(
    name = "push_phase_test",
    srcs = ["push_phase_test.py"],
    deps = [
        "//mlody/common:common_lib",
        "//mlody/common/image_builder/phases:phases_lib",  # keep
        "@pip//pytest",
    ],
)
